--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </ul>
         </nav>
     </header>
+    <h2>prueba commit</h2>
     <section class="noticias-home">
         <h3>Noticias</h3>
         <div class="noticia-1">
