--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
         </section>
         <nav>
             <ul class="navegacion_home">
-                <li><a href="./pages/smartphones.html"><img src="assets/img/telefono-movil.png" alt="smartphones" width="30%"></a></li>
-                <li><a href="./pages/vehículos.html"><img src="assets/img/auto-limpio.png" alt="vehiculos" width="30%"></a></li>
-                <li><a href="./pages/computacion.html"><img src="assets/img/compu.png" alt="computacion" width="30%"></a></li>
-                <li><a href="./pages/social.html"><img src="assets/img/medios-de-comunicacion-social.png" alt="social" width="30%"></a></li>
+                <li><a href="./pages/smartphones.html"><img src="assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="./pages/vehículos.html"><img src="assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
+                <li><a href="./pages/computacion.html"><img src="assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
+                <li><a href="./pages/social.html"><img src="assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
     </header>
-    <h2>prueba commit</h2>
     <section class="noticias-home">
         <h3>Noticias</h3>
         <div class="noticia-1">
