--- a/pages/smartphones.html
+++ b/pages/smartphones.html
@@ -17,10 +17,9 @@
         </h1>
         <nav>
             <ul class="navegacion_smartphones">
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Asesorías y Comsejos</a></li>
-                <li><a href="">Modelos</a></li>
-                <li><a href="">Reseñas</a></li>
+                <li><a href="../pages/vehículos.html"><img src="../assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
+                <li><a href="../pages/computacion.html"><img src="../assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
+                <li><a href="../pages/social.html"><img src="../assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
         <section>
