--- a/pages/social.html
+++ b/pages/social.html
@@ -15,6 +15,13 @@
                 <a href="./social.html"><img id="top" src="../assets/img/medios-de-comunicacion-social.png" alt="logo página" width="7%">Nuestras redes</a>
             </li>
         </h1>
+        <nav>
+            <ul class="navegacion_redes">
+                <li><a href="../pages/smartphones.html"><img src="../assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="../pages/vehículos.html"><img src="../assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
+                <li><a href="../pages/computacion.html"><img src="../assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
+            </ul>
+        </nav>
         <section>
             <h3>Conéctate con nosotros</h3>
             <div class="destacado-redes">
@@ -24,7 +31,7 @@
             </div>
         </section>
         <section class="visita-redes">
-            <h3>Noticias</h3>
+            <h3>Nuestras redes</h3>
             <div class="red-1">
                 <a href="https://www.instagram.com/techtoday.cl/" target="_blank">
                     <img src="../assets/img/instagram.png" alt="instagram" width="10%">
