--- a/pages/vehículos.html
+++ b/pages/vehículos.html
@@ -17,10 +17,9 @@
         </h1>
         <nav>
             <ul class="navegacion_vehiculos">
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Asesorías y Comsejos</a></li>
-                <li><a href="">Modelos</a></li>
-                <li><a href="">Reseñas</a></li>
+                <li><a href="../pages/smartphones.html"><img src="../assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="../pages/computacion.html"><img src="../assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
+                <li><a href="../pages/social.html"><img src="../assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
         <section>
