--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -17,13 +17,9 @@
         </h1>
         <nav>
             <ul class="navegacion_computacion">
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Asesorías y Comsejos</a></li>
-                <li><a href="">Modelos</a></li>
-                <li><a href="">Reseñas</a></li>
-                <li><a href="">Procesadores</a></li>
-                <li><a href="">Gráficas</a></li>
-                <li><a href="">Otros componentes</a></li>
+                <li><a href="../pages/smartphones.html"><img src="../assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="../pages/vehículos.html"><img src="../assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
+                <li><a href="../pages/social.html"><img src="../assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
         <section>
