--- a/pages/smartphones.html
+++ b/pages/smartphones.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smartphones y gadgets</title>
+    <meta name="keywords" content="teléfonos, smartphones, autos, pc, notebook, tecnología, componentes">
+    <meta name="description" content="La sección de Smartphones de TechToday, te ayudará a escoger al mejor teléfono que se ajuste a ti y tu día a día.">
+    <meta name="author" content="Juan Rivero">
+    <meta name="copyright" content="TechToday, Juan Rivero">
+    <meta name="language" content="Español">
+    <meta property="og:title" content=TechToday>
+    <meta property="og:site_name" content=TechToday>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://www.instagram.com/p/Buc90XxhsVn/>
+    <title>Smartphones | TechToday</title>
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/img/2019-03-01.png">
@@ -22,6 +33,8 @@
                 <li><a href="../pages/social.html"><img src="../assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
+    </header>
+    <main>
         <section>
             <h3>Destacado</h3>
             <div class="destacado-smartphones">
@@ -48,7 +61,7 @@
                 <div>El hermano menor de los Oppo Find X6 es uno de los teléfonos más.....</div></h5>
             </div>
         </section>
-    </header>
+    </main>
     <footer class="pie-pagina">
         <div class="derechos">
             <p>2023 - Todos los derechos reservados.</p>
