--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechToday</title>
+    <meta name="keywords" content="telefonos, smartphones, autos, pc, notebook, tecnologia, componentes">
+    <meta name="description" content="TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.">
+    <meta name="author" content="Juan Rivero">
+    <meta name="copyright" content="TechToday, Juan Rivero">
+    <meta name="language" content="Español">
+    <meta property="og:title" content=TechToday>
+    <meta property="og:site_name" content=TechToday>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://www.instagram.com/p/Buc90XxhsVn/>
+    <title>Inicio | TechToday</title>
     <link rel="stylesheet" href="./bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="assets/img/2019-03-01.png">
@@ -23,26 +34,28 @@
         </section>
         <nav>
             <ul class="navegacion_home">
-                <li><a href="./pages/smartphones.html"><img src="assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="./pages/smartphones.html"><img src="assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones</a></li>
                 <li><a href="./pages/vehículos.html"><img src="assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
                 <li><a href="./pages/computacion.html"><img src="assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
                 <li><a href="./pages/social.html"><img src="assets/img/medios-de-comunicacion-social.png" alt="social" width="30%">Nuestras redes</a></li>
             </ul>
         </nav>
     </header>
-    <section class="noticias-home">
-        <h3>Noticias</h3>
-        <div class="noticia-1">
-            <img src="./assets/img/Jetour Dashing.jpg" alt="Noticia Jetour" width="10%">
-            <h5>El espectacular y para todos, el Jetour Dashing
-            <div>Jetour empezó a dejar caer el arribo de su nuevo modelo, el Dashing en Latinoamérica y nos demuestra que no requerimos gastar demás para.......</div></h5>
-        </div>
-        <div class="noticia-2">
-            <h5>Finalmente la espera ha acabado, nos llega el FSR 3.0
-            <div>AMD en esta Gamescom 2023 nos presentó oficialmente la salida de su tecnología de escalado y optimización FidelityFX Super Resolution 3.0 o FSR 3.0 que........</div></h5>
-            <img src="./assets/img/AMD-FSR-3-se-lanzara-en-otono-y-promete-triplicar-el-rendimiento_4-1280x720.jpg" alt="Noticia Jetour" width="10%" style="border-radius: 360%;">
-        </div>
-    </section>
+    <main>
+        <section class="noticias-home">
+            <h3>Noticias</h3>
+            <div class="noticia-1">
+                <img src="./assets/img/Jetour Dashing.jpg" alt="Noticia Jetour" width="10%">
+                <h5>El espectacular y para todos, el Jetour Dashing
+                <div>Jetour empezó a dejar caer el arribo de su nuevo modelo, el Dashing en Latinoamérica y nos demuestra que no requerimos gastar demás para.......</div></h5>
+            </div>
+            <div class="noticia-2">
+                <h5>Finalmente la espera ha acabado, nos llega el FSR 3.0
+                <div>AMD en esta Gamescom 2023 nos presentó oficialmente la salida de su tecnología de escalado y optimización FidelityFX Super Resolution 3.0 o FSR 3.0 que........</div></h5>
+                <img src="./assets/img/AMD-FSR-3-se-lanzara-en-otono-y-promete-triplicar-el-rendimiento_4-1280x720.jpg" alt="Noticia Jetour" width="10%" style="border-radius: 360%;">
+            </div>
+        </section>
+    </main>
     <footer class="pie-pagina">
         <div class="derechos">
             <p>2023 - Todos los derechos reservados.</p>
