--- a/pages/social.html
+++ b/pages/social.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestras redes</title>
+    <meta name="keywords" content="teléfonos, smartphones, autos, pc, notebook, tecnología, componentes">
+    <meta name="description" content="Visita nuestras redes sociales y vídeos para que estés al día con las últimas noticias y contenido. Ademas, podras contactarnos cuando tengas preguntas.">
+    <meta name="author" content="Juan Rivero">
+    <meta name="copyright" content="TechToday, Juan Rivero">
+    <meta name="language" content="Español">
+    <meta property="og:title" content=TechToday>
+    <meta property="og:site_name" content=TechToday>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://www.instagram.com/p/Buc90XxhsVn/>
+    <title>Nuestras redes | TechToday</title>
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/img/2019-03-01.png">
@@ -17,11 +28,13 @@
         </h1>
         <nav>
             <ul class="navegacion_redes">
-                <li><a href="../pages/smartphones.html"><img src="../assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones y gadgets</a></li>
+                <li><a href="../pages/smartphones.html"><img src="../assets/img/telefono-movil.png" alt="smartphones" width="30%">Smartphones</a></li>
                 <li><a href="../pages/vehículos.html"><img src="../assets/img/auto-limpio.png" alt="vehiculos" width="30%">Vehículos</a></li>
                 <li><a href="../pages/computacion.html"><img src="../assets/img/compu.png" alt="computacion" width="30%">Computación</a></li>
             </ul>
         </nav>
+    </header>
+    <main>
         <section>
             <h3>Conéctate con nosotros</h3>
             <div class="destacado-redes">
@@ -48,7 +61,7 @@
                 </a>
             </div>
         </section>
-    </header>
+    </main>
     <footer class="pie-pagina">
         <div class="derechos">
             <p>2023 - Todos los derechos reservados.</p>
