--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="telefonos, smartphones, autos, pc, notebook, tecnologia, componentes">
-    <meta name="description" content="TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.">
+    <meta name="description" content="TechToday es el sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.">
     <meta name="author" content="Juan Rivero">
     <meta name="copyright" content="TechToday, Juan Rivero">
     <meta name="language" content="Español">
     <meta property="og:title" content=TechToday>
     <meta property="og:site_name" content=TechToday>
     <meta property="og:url" content="">
-    <meta property="og:description" content=TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
+    <meta property="og:description" content=TechToday es el sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
     <meta property="og:type" content=website>
     <meta property="og:image" content=https://www.instagram.com/p/Buc90XxhsVn/>
     <title>Inicio | TechToday</title>
