--- a/pages/social.html
+++ b/pages/social.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content=TechToday>
     <meta property="og:site_name" content=TechToday>
     <meta property="og:url" content="">
-    <meta property="og:description" content=TechToday es sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
+    <meta property="og:description" content=TechToday es el sitio y canal que te acerca a la tecnología, donde podrás encontrar noticias, detalles y asesoría en el mundo de la electrónica y vehículos.>
     <meta property="og:type" content=website>
     <meta property="og:image" content=https://www.instagram.com/p/Buc90XxhsVn/>
     <title>Nuestras redes | TechToday</title>
